dist_man_MANS =
dist_man_MANS += dyld.1
dist_man_MANS += strings.1
dist_man_MANS += lipo.1
dist_man_MANS += as.1
dist_man_MANS += nm.1
dist_man_MANS += otool.1
dist_man_MANS += ranlib.1
dist_man_MANS += segedit.1
dist_man_MANS += size.1
dist_man_MANS += strip.1
dist_man_MANS += libtool.1
dist_man_MANS += cmpdylib.1
dist_man_MANS += pagestuff.1
dist_man_MANS += redo_prebinding.1
dist_man_MANS += nmedit.1
dist_man_MANS += install_name_tool.1
dist_man_MANS += codesign_allocate.1
dist_man_MANS += ctf_insert.1
dist_man_MANS += bitcode_strip.1
dist_man_MANS += llvm-otool.1
dist_man_MANS += nm-classic.1
dist_man_MANS += size-classic.1
dist_man_MANS += otool-classic.1
# dist_man_MANS += gprof.1
dist_man_MANS += dyld.3
dist_man_MANS += NSModule.3
dist_man_MANS += NSObjectFileImage.3
dist_man_MANS += dyld_debug.3
dist_man_MANS += kld.3
dist_man_MANS += arch.3
dist_man_MANS += get_end.3
dist_man_MANS += end.3
dist_man_MANS += getsectbyname.3
dist_man_MANS += getsectbynamefromheader.3
dist_man_MANS += getsectdata.3
dist_man_MANS += getsectdatafromheader.3
dist_man_MANS += getsegbyname.3
dist_man_MANS += Mach-O.5
dist_man_MANS += a.out.5
dist_man_MANS += ranlib.5
dist_man_MANS += stab.5
dist_man_MANS += indr.1
dist_man_MANS += checksyms.1
dist_man_MANS += seg_addr_table.1
dist_man_MANS += check_dylib.1
dist_man_MANS += mtoc.1
dist_man_MANS += NSObjectFileImage_priv.3
dist_man_MANS += libsyminfo.3
dist_man_MANS += redo_prebinding.3
